# RAG_llama-index_and_OLLAMA

./: .dockerignore  .gitignore  Dockerfile  README.md  main.ipynb  main.py  pyproject.toml  setup.py
rag_2/: __init__.py
rag_2/config/: config.py
rag_2/llm/: llm.py
