[project]
name = "rag-2"
version = "0.1.0"
description = "Creating a "
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.8.4",
    "llama-index-llms-huggingface",
    "numpy>=2.2.1",
    "llama-index>=0.12.8",
    "langchain-ollama>=0.2.2",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-embeddings-instructor>=0.3.0",
    "llama-index-llms-ollama>=0.5.0",
    "setuptools>=75.6.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
